# supramatch

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  testing.out
cage_calc/: README.md  cage_calc.py
data/: .gitkeep  zd001_Picture_1.xyz  zd001_Picture_1_cavity.pml
guest_dir/: README.md  guest_dir.py
supramatch/: __init__.py  config.py  logging_config.py  pipeline.py
supramatch/cli/: __init__.py  main.py
supramatch/cli/commands/: __init__.py  cage.py  db.py  guest.py  match.py  pipeline.py  price.py
supramatch/db/: __init__.py  base.py  database.py  models.py  queries.py  schema.py
supramatch/db/migrations/: env.py
supramatch/discovery/: __init__.py  price_lookup.py  pubchem_client.py
supramatch/models/: __init__.py  cage.py  guest.py  match.py  price.py
supramatch/modules/: __init__.py  cage_calc.py  guest_calc.py  hg_match.py  matcher.py  scraper.py
supramatch/utils/: __init__.py  helpers.py
test/: cirpy_rdkit_test.py  hg_test.py
tests/: test_c3.py  test_cirpy_rdkit.py  test_cli.sh  test_list.sh  testing.out
tests/data/: cage_out  guests.json  zd001_Picture_1_cavity_esp.pml  zd001_Picture_1_cavity_hydrophobicity.pml
