[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Supramatch"
version = "0.1.0"
description = "A Python package for matching host metal–organic cages to guest molecules"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Megan K. Lu", email = "megan.k.lu.28@dartmouth.edu" }
]

dependencies = [
    "CageCavityCalc",
    "openbabel-wheel>=3.1.1",
    "python-dotenv>=1.0.0",
    "rdkit",
    "click>=8.0.0",
    "click-spinner>=0.1.10",
]

[project.urls]
Repository = "https://github.com/meganklu/supramatch.git"

[project.scripts]
supramatch = "supramatch.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supramatch*"]
