[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Supramatch"
version = "0.1.0"
description = "A Python package for matching host metal–organic cages to guest molecules"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Megan K. Lu", email = "megan.k.lu.28@dartmouth.edu" }
]

dependencies = [
    "CageCavityCalc",
    "openbabel-wheel>=3.1.1",
    "mdanalysis>=2.6.0",
    "python-dotenv>=1.0.0",
    "rdkit",
    "click>=8.0.0",
    "click-spinner>=0.1.10",
    "requests>=2.28.0",
    "chemprice @ git+https://github.com/meganklu/ChemPrice.git@39e391c798ca5a2b203d8b90c6e011f49a17e61b",
]

[project.urls]
Repository = "https://github.com/meganklu/supramatch.git"

[project.scripts]
supramatch = "supramatch.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supramatch*"]
